fix: Remove overflow: hidden to fix focus outline in Safari
- remove overflow: hidden from filter menu container because it causes
Safari to drop the focus outline for any item which overflows, eg the
last (or only) item in the list

- this introduces adverse affect of square corners of last item's background
overflowing the bottom rounded corners when the item is selected

--- a/src/css/large.css
+++ b/src/css/large.css
@@ -86,7 +86,7 @@ body {
   display: flex;
   -webkit-flex-direction: column; /* Safari 8 */
   flex-direction: column;
-  overflow: hidden;
+  /*overflow: hidden;*/ /* Safari 10 loses focus outline on last list item if this is set to hidden */
 }
 
 .filter-menu__header {
